--- a/style.css
+++ b/style.css
@@ -62,3 +62,22 @@ nav ul li a{
     border-radius: 50px;
     margin-top: 20px;
 }
+.back-video{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+@media (min-aspect-ratio : 16/9){
+    .back-video{
+        width: 100%;
+        height: auto;
+    }
+}
+@media (max-aspect-ratio : 16/9){
+    .back-video{
+        width: auto;
+        height: 100%;
+    }
+}
