--- a/style.css
+++ b/style.css
@@ -51,6 +51,11 @@ nav ul li a{
     font-size: 160px;
     color: #fff;
     font-weight: 600;
+    transition: 0.5s;
+}
+.content h1:hover{
+    -webkit-text-stroke: 2px #fff;
+    color: transparent;
 }
 .content a{
     text-decoration: none;
